<resources>
    <string name="app_name">WTest006_ActionBar</string>
    <string name="settings_name">Settings</string>
    <string name="help_name">Help</string>
    <string name="update_name">Check for updates...</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Synchronize email</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="pref_syncConnectionType_defaultValue">WiFi</string>
    <string name="pref_syncConnectionType_summary">Which connection to use when synchronizing.</string>
</resources>
